--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Register for Full Stack Conf</title>
+  <title>Register for Full Stack Conference</title>
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
@@ -17,7 +17,7 @@
       <span id="down">&#8595;</span>
     </header>
     <div class="container">
-      
+
     <form action="index.html" method="post">
               
       <fieldset>         
